pull docker file directly

--- a/config/Config.json
+++ b/config/Config.json
@@ -11,19 +11,19 @@
   "waitBeforeInjectingToxics":"5s",
   "Toxics": [
     {
-      "times": 4,
-      "duration": "15s",
-      "duration_offset":"0s",
-      "pause": "5s",
-      "pause_offset":"0s",
-      "toxics": [
+      "times": 1000,
+      "duration": "750ms",
+      "duration_offset":"250ms",
+      "pause": "500ms",
+      "pause_offset":"0ms",
+      "toxicAttrib": [
         {
           "proxy": 0,
           "type": "slicer",
           "name": "slicer",
           "attributes": {
             "average_size":100,
-            "delay": 1000000
+            "delay": 500000
           }
         }
       ]
