--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services: 
   toxiproxy: 
-    image: jauderho/toxiproxy 
+    image: ghcr.io/shopify/toxiproxy:2.4.0
     ports: 
       - "8474:8474" 
       - "8554:8554" 
